[package]
name = "jgz-verktyg"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.4.12", features = ["derive"] }
csv = "1.3.0"
indicatif = "0.17.7"
rust_xlsxwriter = "0.79.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
ureq = { version = "2.9.1", features = ["json"] }
